WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168079
SharedArrayBuffer does not need to be in the transfer list
https://bugs.webkit.org/show_bug.cgi?id=168079
Summary
SharedArrayBuffer does not need to be in the transfer list
Filip Pizlo
Reported
2017-02-09 14:26:40 PST
Patch forthcoming.
Attachments
possible patch
(36.92 KB, patch)
2017-02-09 14:32 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
more
(45.10 KB, patch)
2017-02-09 15:33 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(48.20 KB, patch)
2017-02-09 16:48 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-02-09 14:32:54 PST
Created
attachment 301087
[details]
possible patch
Filip Pizlo
Comment 2
2017-02-09 15:33:30 PST
Created
attachment 301092
[details]
more
Filip Pizlo
Comment 3
2017-02-09 16:48:56 PST
Created
attachment 301102
[details]
the patch
Geoffrey Garen
Comment 4
2017-02-09 16:58:14 PST
Comment on
attachment 301102
[details]
the patch r=me
Keith Miller
Comment 5
2017-02-09 17:01:06 PST
Comment on
attachment 301102
[details]
the patch r=me too.
Filip Pizlo
Comment 6
2017-02-09 18:44:19 PST
Landed in
https://trac.webkit.org/changeset/212035
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug