LayoutTests/workers/sab/sab-creator-no-transfer.js
@@ -1,0 +1,4 @@
+var sab = new SharedArrayBuffer(100 * 4);
+var memory = new Int32Array(sab);
+postMessage(memory);
+
